dynamic page attribute of text

--- a/pages/DynamicPage/edit_data.twig
+++ b/pages/DynamicPage/edit_data.twig
@@ -6,7 +6,8 @@
                     <tr v-for="s in structure">
                         <th v-text="s.name"></th>
                         <td>
-                            <el-input v-if="s.type=='text'" v-model="data[s.name]" autosize type="textarea" v-bind="s.attributes" show-word-limit></el-input>
+                            <el-input v-if="s.type=='text'" v-model="data[s.name]" autosize type="textarea"
+                                v-bind="s.attributes" show-word-limit></el-input>
                             <input v-if="s.type=='image'" v-model="data[s.name]" is="fileman" :name="s.name"
                                 :data-field="s.name" url="Fileman/?token=" />
 
@@ -30,8 +31,9 @@
                                                 "></el-button>
                                             </td>
                                             <td v-for="(b,i) in s.body">
-                                                <el-input v-model="d[b.name]" v-if="b.type=='text'" autosize
-                                                    type="textarea"></el-input>
+                                                <el-input v-model="d[b.name]" v-if="b.type=='text'"
+                                                    v-bind="b.attributes" autosize type="textarea" show-word-limit>
+                                                </el-input>
 
                                                 <input v-if="b.type=='image'" v-model="d[b.name]" is="fileman"
                                                     :name="`s.name_${i}`" :data-field="`s.name_${i}`"
