--- a/pages/DynamicPage/test2.twig
+++ b/pages/DynamicPage/test2.twig
@@ -1,5 +1,6 @@
 {% for a1 in arr1|list %}
     {% for row in rows %}
-        {{a1.input2|text}}
+    {{row.input1}}
+    {{a1.input2|text}}
     {% endfor %}
 {% endfor %}
