--- a/pages/DynamicPage/test2.twig
+++ b/pages/DynamicPage/test2.twig
@@ -1,6 +1,1 @@
-{% for a1 in arr1|list %}
-    {% for row in rows %}
-     {{row.input1}}
-    {{a1.input2|text}}
-    {% endfor %}
-{% endfor %}
+{% for a1 in arr1|list %}{% for row in rows %}{{row.input1}}{{a1.input2|text}}{% endfor %}{% endfor %}  
