--- a/pages/DynamicPage/test2.twig
+++ b/pages/DynamicPage/test2.twig
@@ -1,22 +1,14 @@
-{% if bbb %}
+
 
 {% for a in arr1|list %}
 
 
-{{a.input1|text}}
+{{a.input1|image({maxlength:10})}}
 
-{% for b in a.bs|list %}
-
-{{b.input2|text}}
-
-
-{% endfor %}
 
 {% endfor %}  
 
-{{other1|text}}
-{% endif %}
-{{other2|text}}
+{{other1|image({maxlength:10})}}
 
 
 
