rt pagination use el input

--- a/template/master.twig
+++ b/template/master.twig
@@ -183,6 +183,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 
     <script src="{{system_base}}/src/jquery.ajaxbox.js" defer></script>
+    <script>i18n.locale="{{app.user.language}}"</script>
 </head>
 
 {% set body = app.user.style.body|join(' ') %}
