--- a/pages/UserGroup/ae_user.twig
+++ b/pages/UserGroup/ae_user.twig
@@ -2,9 +2,9 @@
 
 
 <div id="div1">
-	<div class="box box-primary">
-		<div class="box-body table-responsive">
-			<table class="table table-condensed table-hover">
+	<card>
+		<card-body>
+			<table class="table table-sm table-hover">
 				<thead>
 					<tr>
 						<td></td>
@@ -15,15 +15,16 @@
 					<tr v-for="ul in uls">
 						<td v-text="ul.name"></td>
 						<td v-for="ug in usergroups">
-							<icheck :value="isUserGroup(ul,ug)" @input="onClickUserGroup(ul,ug,$event)"></icheck>
+							<el-checkbox :value="isUserGroup(ul,ug)" @change="onClickUserGroup(ul,ug,$event)">
+							</el-checkbox>
 						</td>
 					</tr>
 				</tbody>
 
 			</table>
-		</div>
+		</card-body>
 
-	</div>
+	</card>
 </div>
 
 
@@ -34,15 +35,18 @@
 			usergroups: [],
 			uls: []
 		}, created() {
-			this.$http.get("UserGroup/ae_user/data").then(resp => {
-				return resp.data;
-			}).then(resp => {
-				console.log(resp);
-				this.usergroups = resp.usergroups;
-				this.uls = resp.uls;
-
-			});
+			this.reload();
 		}, methods: {
+			reload() {
+				this.$http.get("UserGroup/ae_user/data").then(resp => {
+					return resp.data;
+				}).then(resp => {
+					console.log(resp);
+					this.usergroups = resp.usergroups;
+					this.uls = resp.uls;
+
+				});
+			},
 			isUserGroup(user, usergroup) {
 				if (user.usergroup_id.indexOf(usergroup.usergroup_id) >= 0) {
 					return true;
@@ -66,6 +70,7 @@
 						if (resp.data.error) {
 							alert(resp.data.error.message);
 						}
+						this.reload();
 					});
 				} else {
 					this.$gql.mutation("api", {
@@ -83,6 +88,7 @@
 						if (resp.data.error) {
 							alert(resp.data.error.message);
 						}
+						this.reload();
 					});
 				}
 
