vue run time  template

--- a/template/master.twig
+++ b/template/master.twig
@@ -58,6 +58,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
     {% endif %}
     <script src="{{system_base}}/plugins/vue/vue-resource.min.js"></script>
     <script src="{{system_base}}/plugins/vue/vue-gql.js"></script>
+
+    <script src="{{system_base}}/plugins/vue/vue-runtime-template-compiler.umd.js"></script>
     
 
     <link rel="stylesheet" href="{{system_base}}/alt-component/dist/alt-component.css">
