--- a/pages/User/profile.twig
+++ b/pages/User/profile.twig
@@ -15,7 +15,6 @@
 
                 <button class="btn btn-primary btn-block"
                     @click="resetDialogVisible=true">{{'Reset passsword'|trans}}</button>
-                <a class="btn btn-primary btn-block" href="User/2step">{{'2 step verfication'|trans}}</a>
                 <a class="btn btn-primary btn-block" href="User/2step_whitelist">2 step verfication ip white list</a>
                 <button class="btn btn-primary btn-block" @click="createWebAuthn">Web Authentication</button>
             </div>
@@ -68,14 +67,7 @@
             </card-footer>
         </card>
 
-        <card primary outline>
-            <card-header title="2 step verfication"></card-header>
-            <card-body>
-                
-
-            </card-body>
-
-        </card>
+        <two-step-verification-card></two-step-verification-card>
 
         <card primary outline :loading="loading">
             <card-header title="User log"></card-header>
@@ -104,7 +96,10 @@
     </div>
 </div>
 
+<input type="hidden" id="system_base" value="/alt3" />
 <script>
+    Vue.component("two-step-verification-card", httpVueLoader(document.getElementById("system_base").value + "/components/two-step-verification-card.vue"));
+
     var vm = new Vue({
         el: "#div1",
         data: {
