--- a/pages/Module/index.twig
+++ b/pages/Module/index.twig
@@ -1,4 +1,5 @@
-<div class="row">
+
+<div class="row" id="div1">
     <div class="col-md-2">
         {{left_box|raw}}
     </div>
@@ -8,3 +9,8 @@
     </div>
 
 </div>
+<script>
+    var vm=new Vue({
+        el:"#div1"
+    });
+</script>
