--- a/pages/System/example/test.twig
+++ b/pages/System/example/test.twig
@@ -9,3 +9,14 @@
         <option>Washington</option>
     </select>
 </div>
+
+
+<div id="div1">
+    <el-checkbox></el-checkbox>
+</div>
+
+<script>
+    new Vue({
+        el: "#div1"
+    });
+</script>
